--- a/src/style/footer.css
+++ b/src/style/footer.css
@@ -8,7 +8,6 @@
   width: 100%;
   background: var(--footer-bg);
   color: var(--text-color);
-  padding: 5% 0%;
 }
 div.footer p {
   font-size: var(--mediumfont);
@@ -18,7 +17,7 @@ div.footer p {
 .quote {
   position: relative;
   bottom: 0;
-  height: 8rem;
+  height: auto;
   color: #ffc;
   font-family: var(--esp-style);
   background: radial-gradient(rgba(3, 3, 3, 0.253), rgba(204, 204, 204, 0.164));
