--- a/src/style/nav.css
+++ b/src/style/nav.css
@@ -1,6 +1,6 @@
 .nav-bar {
   position: absolute;
-  top: 84%;
+  top: 92%;
   width: 100%;
   z-index: 500;
   text-align: right;
@@ -40,7 +40,7 @@ nav a:first-child {
 .sticky {
   top: 0;
   position: fixed;
-  background: var(--master-bg);
+  background: var(--footer-bg);
   height: 50px;
   width: 100%;
   -webkit-box-shadow: 0px 2px 9px 2px rgba(0, 0, 0, 0.3);
@@ -48,5 +48,5 @@ nav a:first-child {
   box-shadow: 0px 2px 9px 2px rgba(0, 0, 0, 0.3);
 }
 .list a {
-  color: var(--pale-dark-color);
+  color: #000;
 }
